record steps for demo